feat: added latest reviews and top games endpoints
