# docs/swagger.yaml
@@ -89,8 +89,6 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Get games
@@ -111,8 +109,6 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Get game by id
@@ -141,11 +137,23 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Get game reviews
+      tags:
+      - Games
+  /games/rankings/top:
+    get:
+      description: Get games with more reviews
+      operationId: get-top-games
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "500":
+          description: Internal Server Error
+      summary: Get top games
       tags:
       - Games
   /login:
@@ -180,8 +188,6 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Logout
@@ -214,8 +220,6 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Latest Reviews
@@ -235,11 +239,37 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
       summary: Get user games
+      tags:
+      - User
+  /user/{username}/games/{gameId}:
+    get:
+      description: Get user game by id
+      parameters:
+      - description: Game ID
+        in: path
+        name: gameId
+        required: true
+        type: string
+      - description: Username
+        in: path
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "404":
+          description: Not Found
+        "500":
+          description: Internal Server Error
+      security:
+      - cookieAuth: []
+      summary: Get user game
       tags:
       - User
   /user/{username}/profile:
@@ -256,12 +286,8 @@ paths:
       responses:
         "200":
           description: OK
-        "401":
-          description: Unauthorized
         "500":
           description: Internal Server Error
-      security:
-      - cookieAuth: []
       summary: Get user profile
       tags:
       - User
@@ -310,30 +336,6 @@ paths:
       security:
       - cookieAuth: []
       summary: Delete user game
-      tags:
-      - User
-    get:
-      description: Get user game by id
-      parameters:
-      - description: Game ID
-        in: path
-        name: gameId
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-        "401":
-          description: Unauthorized
-        "404":
-          description: Not Found
-        "500":
-          description: Internal Server Error
-      security:
-      - cookieAuth: []
-      summary: Get user game
       tags:
       - User
     put:
